syntax = "proto3";
package pb;

import "google/protobuf/empty.proto";
import "worker.proto";

service Controller {
  rpc Status(google.protobuf.Empty) returns (StatusResponse);
  rpc AddWorker(AddWorkerRequest) returns (AddWorkerResponse);
  rpc SetExecuteRequest(ExecuteRequest) returns (google.protobuf.Empty);
  rpc SetPlugin(DistributeRequest) returns (DistributeAllResponse);
  rpc Start(google.protobuf.Empty) returns (StartResponse);
  rpc Wait(ControllerWaitRequest) returns (stream ControllerWaitResponse);
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message WorkerInfo {
  string uuid = 1;
  string address = 2;
  enum Status {
    UNSPECIFIED = 0;
    INITIALIZED = 1;
    DISTRIBUTED = 2;
    RUNNING = 3;
    SUCCESS = 4;
    FAILURE = 5;
  }
  Status status = 3;
}

message StatusResponse {
  repeated WorkerInfo workers = 1;
}

message AddWorkerRequest {
  repeated string addresses = 1;
}

message AddWorkerResponse {
  repeated WorkerInfo workers = 1;
}

message DistributeAllResponse {
  repeated WorkerInfo workers = 2;
}

message StartResponse {
  repeated WorkerInfo workers = 1;
}

message ControllerWaitRequest {
  string uuid = 1;
}

message ControllerWaitResponse {
  string uuid = 1;
  WaitResponse wait_response = 2;
}
